Updated html with new meta tag that prevents zooming when the date picker calendar is clicked, had a problem on mobile devices that had the 3D render view be skewed because of the zooming in when choosing date. Also updating description and title tags to match project

--- a/src/App.css
+++ b/src/App.css
@@ -9,40 +9,6 @@ body,
     height: 100%;
     overflow: hidden;
 }
-
-.App {
-  text-align: center;
-  width: 100%;
-  height: 100%;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-
-}
-
-.App-link {
-  color: #61dafb;
-}
-
 .content {
   position: fixed;
     top: 0;
@@ -51,4 +17,46 @@ body,
     height: 100%;
     overflow: hidden;
 }
+
+.calendar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh; /* Taking full height of the viewport */
+  width: 100vw; /* Taking full width of the viewport */
+  position: relative;
+}
+
+/* DatePicker Styling */
+.change {
+  font-size: 2vw; /* Adjust based on your preference */
+  border-radius: 10px;
+}
+
+/* Button Styling */
+button {
+  font-size: 1.5vw; /* Adjust based on your preference */
+  padding: 0.5em 1em; /* Giving it some spacing */
+  border: none;
+  background-color: lightpurple; /* or any desired color */
+  border-radius: 25px; /* Making it pill-shaped */
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: purple; /* or any desired color for hover effect */
+  color: white; /* Text color on hover */
+}
+
+/* Media Query for smaller devices */
+@media (max-width: 600px) {
+  .change {
+      font-size: 3.5vw;
+  }
+
+  button {
+      font-size: 3vw;
+  }
+}
+
 
